# grok-spicy

./: .env.example  .gitignore  CLAUDE.md  Optimized Video Generation Prompt.txt  Prompting-Structure-Guide.md  README.md  bug-plan.md  grok-video-pipeline-plan.md  prompt13.txt  prompt5.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup_env_windows.ps1  start_ollama_windows.ps1  start_qdrant_windows.ps1  video.json  video1.json
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/features/: 01-project-scaffolding.md  03-xai-client-wrapper.md  06-keyframe-composition.md  10-prefect-orchestration.md  12-extended-video-duration.md  15-local-comfyui-migration.md  16-character-clothes-enhancement.md  Feature-plan-frontend.md  README.md
docs/features/DONE/: 02-data-models.md  04-story-ideation.md  05-character-sheets.md  07-script-compilation.md  08-video-generation.md  09-video-assembly.md  11-cli-entry-point.md  13-centralized-spicy-mode-config.md  14-remove-hardcoded-motion-suffix.md  big-fix-leaks-data-flow.md
examples/: video-extreme.json  video-high.json  video-low.json  video-medium.json  video-scene-only.json  video-solo.json  video-with-images.json
src/grok_spicy/: __init__.py  __main__.py  client.py  config.py  db.py  dry_run.py  events.py  observer.py  pipeline.py  prompt_builder.py  prompts.py  schemas.py  web.py
src/grok_spicy/tasks/: __init__.py  assembly.py  characters.py  describe_ref.py  ideation.py  keyframes.py  script.py  video.py
src/grok_spicy/templates/: base.html  index.html  new_run.html  run.html
tests/: README.md  test_cli.py  test_client.py  test_db.py  test_dry_run.py  test_events.py  test_observer.py  test_pipeline_config.py  test_pipeline_helpers.py  test_prompts.py  test_schemas.py  test_script.py  test_video_config.py  test_web.py  test_web_live.py
