[project]
name = "grok-spicy"
version = "0.1.0"
description = "Automated multi-scene video pipeline powered by Grok APIs"
requires-python = ">=3.12"
dependencies = [
    "xai-sdk>=0.1",
    "prefect>=3.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
grok-spicy = "grok_spicy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grok_spicy"]
