[project]
name = "grok-spicy"
version = "0.1.0"
description = "Automated multi-scene video pipeline powered by Grok APIs"
requires-python = ">=3.12"
dependencies = [
    "xai-sdk>=0.1",
    "prefect>=3.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
grok-spicy = "grok_spicy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grok_spicy"]

# ─── Linting & Formatting ────────────────────────────────────

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
known_first_party = ["grok_spicy"]
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
